--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html data-ng-app="MyApp">
 <head>
-    <title>ToDo App</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
-    <script src="/script.js"></script>
-    <script src="/app.js"></script>
+  <title>ToDo App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.0.0/lodash.min.js"></script>
+  <script src="/script.js"></script>
+  <script src="/app.js"></script>
 </head>
 
 <body data-ng-view>
-    
+
 </body>
 </html>
