--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-ng-app="MyApp">
+<html ng-app="MyApp">
 <head>
   <title>ToDo App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +9,8 @@
   <script src="/app.js"></script>
 </head>
 
-<body data-ng-view>
+<body>
+<ng-view/>
 
 </body>
 </html>
